nginx-web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: docker.io/nginx:1.14.2
        ports:
        - containerPort: 80

        image: atmoz/sftp
        securityContext:
          capabilities:
            add: ['SYS_ADMIN']
          privileged: true
